@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.47">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.48">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
@@ -25,11 +25,8 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.3.47 [20230310]:
-- Made Nya Alt easier for Verizon Users
-- Added New Setting "Preferred Subtitle Language"
-- Renamed "Preferred Audio Stream"
-- Renamed "Preferred Stream Source"
+Changelog 0.3.48 [20230310]:
+- Fixed crash on 9anime streams
     </news>
   </extension>
 </addon>
